# ai-recruitment-platform

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTIVE_SUMMARY.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
docs/: architecture.md  career-intelligence.md  deployment.md  ranking-methodology.md  trust-engine.md
outputs/: submission.csv
scripts/: precompute.py
src/api/: api.py
src/config/: config.py
src/engines/: __init__.py  career_intel.py  experience_alignment.py  honeypot_detector.py  jd_graph.py
src/explainability/: __init__.py  explainer.py
src/preprocessing/: __init__.py  data_models.py  preprocessor.py
src/ranking/: __init__.py  ranker.py  ranking_pipeline.py
src/ui/: app.py
src/utils/: logger.py
tests/: test_engines.py  test_honeypots.py  test_ranker.py
